tests/NormalTests/paczka1/small_fuzzy/97013351.err
Error in line 1: hU6fOMVbSgj A71 61,7
Error in line 3: N2KpFyp0nxK A195 83,1
Error in line 5: N2KpFyp0nxK S250 22,5
